--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 # end
 
   config.vm.define "baseRH7" do |baseRH7|
-    baseRH7.vm.box = "RH7.5_baserepo"
+    baseRH7.vm.box = "clouddood/RH7.5_baserepo"
     baseRH7.vm.hostname = "baseRH7"
     baseRH7.vm.network "private_network", ip: "192.168.60.142"
     baseRH7.vm.provision "shell", :inline => "sudo echo '192.168.60.142 baseRH7.local baseRH7' >> /etc/hosts"
