--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -10,6 +10,12 @@ Vagrant.configure("2") do |config|
 #   trigger.info = "Trigger Execution ..."
 #   trigger.run = { path:"subscription-manager register --username <username> --password <password> --auto-attach"}
 # end
+  config.vm.define "winClient01" do |winClient01|
+    winClient01.vm.box = "https://app.vagrantup.com/mwrock/boxes/Windows2012R2"
+    winClient01.vm.box = "mwrock/Windows2012R2"
+    winClient01.vm.hostname = "winClient01"
+    winClient01.vm.network "private_network", ip: "192.168.60.170"
+  end
 
   config.vm.define "baseRH7" do |baseRH7|
     baseRH7.vm.box = "clouddood/RH7.5_baserepo"
